refactor for public api