@@ -12,48 +12,54 @@ import java.util.stream.Collectors;
 
 public final class ProtocolLifecycleSteps {
     
-    private sealed interface TestState {
-        record ConnectionState(McpHost host, String clientId, boolean closed) implements TestState {}
-        record VersionNegotiation(List<String> supported, String requested, String negotiated) implements TestState {}
-        record CapabilityState(Set<ClientCapability> client, Set<ServerCapability> server, 
-                             Set<ServerCapability> available, Set<ServerCapability> unavailable) implements TestState {}
-        record MessageState(RequestId id, JsonObject request, JsonObject response, JsonObject notification, 
-                          int errorCode, String errorMessage, Set<RequestId> usedIds) implements TestState {}
-    }
-    
     private McpClientConfiguration clientConfig;
     private McpHostConfiguration hostConfig;
+    private McpHost activeConnection;
+    private String clientId;
     
-    private TestState.ConnectionState connection = new TestState.ConnectionState(null, null, false);
-    private TestState.VersionNegotiation versionState = new TestState.VersionNegotiation(List.of(), null, null);
-    private TestState.CapabilityState capabilityState = new TestState.CapabilityState(
-        EnumSet.noneOf(ClientCapability.class), EnumSet.noneOf(ServerCapability.class),
-        EnumSet.noneOf(ServerCapability.class), EnumSet.noneOf(ServerCapability.class));
-    private TestState.MessageState messageState = new TestState.MessageState(
-        null, null, null, null, 0, null, new HashSet<>());
+    private boolean connectionClosed = false;
+    private String requestedVersion;
+    private String negotiatedVersion;
+    private List<String> serverSupportedVersions = new ArrayList<>();
+    
+    private Set<ClientCapability> clientCapabilities = EnumSet.noneOf(ClientCapability.class);
+    private Set<ServerCapability> serverCapabilities = EnumSet.noneOf(ServerCapability.class);
+    private Set<ServerCapability> availableFeatures = EnumSet.noneOf(ServerCapability.class);
+    
+    private RequestId lastRequestId;
+    private JsonObject lastRequest;
+    private JsonObject lastResponse;
+    private JsonObject lastNotification;
+    private String lastErrorMessage;
+    private int lastErrorCode;
+    private Set<RequestId> usedRequestIds = new HashSet<>();
 
-    private static Set<ClientCapability> parseClientCapabilities(String raw) {
-        if (raw.isBlank()) return Set.of();
-        return Arrays.stream(raw.split(","))
+    private Set<ClientCapability> parseClientCapabilities(String capabilities) {
+        if (capabilities == null || capabilities.trim().isEmpty()) {
+            return EnumSet.noneOf(ClientCapability.class);
+        }
+        return Arrays.stream(capabilities.split(","))
                 .map(String::trim)
                 .map(String::toUpperCase)
                 .map(ClientCapability::valueOf)
                 .collect(Collectors.toCollection(() -> EnumSet.noneOf(ClientCapability.class)));
     }
 
-    private static Set<ServerCapability> parseServerCapabilities(String raw) {
-        return switch (raw.trim().toLowerCase()) {
-            case "none", "" -> Set.of();
-            case "all" -> EnumSet.allOf(ServerCapability.class);
-            default -> Arrays.stream(raw.split(","))
-                    .map(String::trim)
-                    .map(ServerCapability::from)
-                    .flatMap(Optional::stream)
-                    .collect(Collectors.toCollection(() -> EnumSet.noneOf(ServerCapability.class)));
-        };
+    private Set<ServerCapability> parseServerCapabilities(String capabilities) {
+        if (capabilities == null || capabilities.trim().isEmpty() || "none".equalsIgnoreCase(capabilities.trim())) {
+            return EnumSet.noneOf(ServerCapability.class);
+        }
+        if ("all".equalsIgnoreCase(capabilities.trim())) {
+            return EnumSet.allOf(ServerCapability.class);
+        }
+        return Arrays.stream(capabilities.split(","))
+                .map(String::trim)
+                .map(ServerCapability::from)
+                .flatMap(Optional::stream)
+                .collect(Collectors.toCollection(() -> EnumSet.noneOf(ServerCapability.class)));
     }
-    
-    private static JsonObject createJsonRpcRequest(RequestId id, String method, JsonObject params) {
+
+    private JsonObject createRequest(RequestId id, String method, JsonObject params) {
         var builder = Json.createObjectBuilder()
                 .add("jsonrpc", "2.0")
                 .add("id", RequestId.toJsonValue(id))
@@ -64,7 +70,7 @@ public final class ProtocolLifecycleSteps {
         return builder.build();
     }
     
-    private static JsonObject createJsonRpcResponse(RequestId id, JsonObject result) {
+    private JsonObject createResponse(RequestId id, JsonObject result) {
         return Json.createObjectBuilder()
                 .add("jsonrpc", "2.0")
                 .add("id", RequestId.toJsonValue(id))
@@ -72,7 +78,7 @@ public final class ProtocolLifecycleSteps {
                 .build();
     }
     
-    private static JsonObject createJsonRpcNotification(String method, JsonObject params) {
+    private JsonObject createNotification(String method, JsonObject params) {
         var builder = Json.createObjectBuilder()
                 .add("jsonrpc", "2.0")
                 .add("method", method);
@@ -82,7 +88,7 @@ public final class ProtocolLifecycleSteps {
         return builder.build();
     }
 
-    private static McpClientConfiguration configureWithCommand(McpClientConfiguration base, String commandSpec) {
+    private McpClientConfiguration configureWithCommand(McpClientConfiguration base, String commandSpec) {
         return new McpClientConfiguration(
                 base.clientId(), base.serverName(), base.serverDisplayName(), base.serverVersion(),
                 base.principal(), base.clientCapabilities(), commandSpec, base.defaultReceiveTimeout(),
@@ -93,7 +99,7 @@ public final class ProtocolLifecycleSteps {
         );
     }
     
-    private static McpClientConfiguration configureWithCapabilities(McpClientConfiguration base, Set<ClientCapability> capabilities) {
+    private McpClientConfiguration configureWithCapabilities(McpClientConfiguration base, Set<ClientCapability> capabilities) {
         return new McpClientConfiguration(
                 base.clientId(), base.serverName(), base.serverDisplayName(), base.serverVersion(),
                 base.principal(), capabilities, base.commandSpec(), base.defaultReceiveTimeout(),
@@ -105,28 +111,44 @@ public final class ProtocolLifecycleSteps {
     }
 
     private void updateHostConfiguration() {
-        hostConfig = McpHostConfiguration.withClientConfigurations(List.of(clientConfig));
-        connection = new TestState.ConnectionState(connection.host(), clientConfig.clientId(), connection.closed());
+        if (clientConfig != null) {
+            hostConfig = McpHostConfiguration.withClientConfigurations(List.of(clientConfig));
+            clientId = clientConfig.clientId();
+        }
     }
 
     @Given("a clean MCP environment")
     public void a_clean_mcp_environment() {
         try {
-            if (connection.host() != null) connection.host().close();
+            if (activeConnection != null) activeConnection.close();
         } catch (IOException ignore) {
         }
-        connection = new TestState.ConnectionState(null, null, false);
+        
+        activeConnection = null;
+        clientId = null;
         clientConfig = null;
         hostConfig = null;
-        versionState = new TestState.VersionNegotiation(List.of(), null, null);
-        capabilityState = new TestState.CapabilityState(
-            EnumSet.noneOf(ClientCapability.class), EnumSet.noneOf(ServerCapability.class),
-            EnumSet.noneOf(ServerCapability.class), EnumSet.noneOf(ServerCapability.class));
-        messageState = new TestState.MessageState(null, null, null, null, 0, null, new HashSet<>());
+        connectionClosed = false;
+        
+        requestedVersion = null;
+        negotiatedVersion = null;
+        serverSupportedVersions.clear();
+        
+        clientCapabilities = EnumSet.noneOf(ClientCapability.class);
+        serverCapabilities = EnumSet.noneOf(ServerCapability.class);
+        availableFeatures = EnumSet.noneOf(ServerCapability.class);
+        
+        lastRequestId = null;
+        lastRequest = null;
+        lastResponse = null;
+        lastNotification = null;
+        lastErrorMessage = null;
+        lastErrorCode = 0;
+        usedRequestIds.clear();
     }
 
-    @Given("JSON-RPC transport is available")
-    public void json_rpc_transport_is_available() {
+    @Given("a transport mechanism is available")
+    public void a_transport_mechanism_is_available() {
         McpClientConfiguration base = McpClientConfiguration.defaultConfiguration("client", "server", "user");
         String cp = System.getProperty("java.class.path");
         String cmd = "java -cp " + cp + " com.amannmalik.mcp.cli.Entrypoint server --stdio --test-mode";
@@ -134,8 +156,9 @@ public final class ProtocolLifecycleSteps {
         updateHostConfiguration();
     }
 
-    @Given("a client requesting protocol version {string}")
-    public void a_client_requesting_protocol_version(String version) {
+    @Given("I want to connect using protocol version {string}")
+    public void i_want_to_connect_using_protocol_version(String version) {
+        requestedVersion = version;
         if (hostConfig != null) {
             hostConfig = new McpHostConfiguration(
                     version, hostConfig.compatibilityVersion(), hostConfig.hostClientName(),
@@ -147,442 +170,467 @@ public final class ProtocolLifecycleSteps {
         }
     }
 
-    @Given("client declares capabilities {string}")
-    public void client_declares_capabilities(String caps) {
+    @Given("I can provide {string} capabilities")
+    public void i_can_provide_capabilities(String capabilities) {
         if (clientConfig != null) {
-            Set<ClientCapability> capabilities = parseClientCapabilities(caps);
-            clientConfig = configureWithCapabilities(clientConfig, capabilities);
+            clientCapabilities = parseClientCapabilities(capabilities);
+            clientConfig = configureWithCapabilities(clientConfig, clientCapabilities);
             updateHostConfiguration();
-            capabilityState = new TestState.CapabilityState(
-                capabilities, capabilityState.server(), capabilityState.available(), capabilityState.unavailable());
         }
     }
 
-    @When("initialize request is sent")
-    public void initialize_request_is_sent() throws Exception {
+    @When("I establish a connection with the server")
+    public void i_establish_a_connection_with_the_server() throws Exception {
         if (hostConfig == null) return;
-        var host = new McpHost(hostConfig);
-        String clientId = clientConfig.clientId();
-        host.connect(clientId);
-        connection = new TestState.ConnectionState(host, clientId, false);
+        activeConnection = new McpHost(hostConfig);
+        clientId = clientConfig.clientId();
+        activeConnection.connect(clientId);
     }
 
-    @Then("server responds with compatible version")
-    public void server_responds_with_compatible_version() throws Exception {
-        if (connection.host() == null || connection.clientId() == null || hostConfig == null) {
-            throw new IllegalStateException("initialize request not sent");
+    @Then("the connection should be established successfully")
+    public void the_connection_should_be_established_successfully() throws Exception {
+        if (activeConnection == null || clientId == null || hostConfig == null) {
+            throw new IllegalStateException("connection not initiated");
         }
         if (!Protocol.SUPPORTED_VERSIONS.contains(hostConfig.protocolVersion())) {
-            throw new AssertionError("unsupported protocol version");
+            throw new AssertionError("protocol version not supported");
         }
-        JsonRpcMessage msg = connection.host().request(connection.clientId(), RequestMethod.PING, Json.createObjectBuilder().build());
-        if (msg == null) {
-            throw new AssertionError("ping failed");
-        }
+        negotiatedVersion = hostConfig.protocolVersion();
     }
 
-    @Then("server declares its capabilities")
-    public void server_declares_its_capabilities() throws Exception {
-        if (connection.host() == null || connection.clientId() == null) {
+    @Then("both parties should agree on capabilities")
+    public void both_parties_should_agree_on_capabilities() throws Exception {
+        if (activeConnection == null || clientId == null) {
             throw new IllegalStateException("connection not established");
         }
-        boolean hasCapabilities = false;
+        
+        boolean hasServerCapabilities = false;
         try {
-            connection.host().listTools(connection.clientId(), Cursor.Start.INSTANCE);
-            hasCapabilities = true;
+            activeConnection.listTools(clientId, Cursor.Start.INSTANCE);
+            serverCapabilities.add(ServerCapability.TOOLS);
+            hasServerCapabilities = true;
         } catch (Exception ignore) {
         }
         try {
-            connection.host().request(connection.clientId(), RequestMethod.RESOURCES_LIST, Json.createObjectBuilder().build());
-            hasCapabilities = true;
+            activeConnection.request(clientId, RequestMethod.RESOURCES_LIST, Json.createObjectBuilder().build());
+            serverCapabilities.add(ServerCapability.RESOURCES);
+            hasServerCapabilities = true;
         } catch (Exception ignore) {
         }
-        if (!hasCapabilities) {
-            throw new AssertionError("no server capabilities discovered");
-        }
-    }
-
-    @Then("server provides implementation information")
-    public void server_provides_implementation_information() {
-        if (connection.host() == null) {
-            throw new IllegalStateException("host not initialized");
-        }
-        String context = connection.host().aggregateContext();
+        
+        availableFeatures.addAll(serverCapabilities);
+        
+        String context = activeConnection.aggregateContext();
         if (context == null) {
-            throw new AssertionError("missing implementation info");
+            throw new AssertionError("missing server implementation info");
         }
     }
 
-    @When("initialized notification is sent")
-    public void initialized_notification_is_sent() throws Exception {
-        if (connection.host() != null && connection.clientId() != null) {
-            connection.host().notify(connection.clientId(), NotificationMethod.INITIALIZED, Json.createObjectBuilder().build());
-        }
-    }
-
-    @Then("connection becomes operational")
-    public void connection_becomes_operational() throws Exception {
-        if (connection.host() == null || connection.clientId() == null) {
+    @Then("I should be able to exchange messages")
+    public void i_should_be_able_to_exchange_messages() throws Exception {
+        if (activeConnection == null || clientId == null) {
             throw new IllegalStateException("connection not established");
         }
-        JsonRpcMessage msg = connection.host().request(connection.clientId(), RequestMethod.PING, Json.createObjectBuilder().build());
-        if (msg == null) {
-            throw new AssertionError("connection not operational");
+        
+        activeConnection.notify(clientId, NotificationMethod.INITIALIZED, Json.createObjectBuilder().build());
+        
+        JsonRpcMessage response = activeConnection.request(clientId, RequestMethod.PING, Json.createObjectBuilder().build());
+        if (response == null) {
+            throw new AssertionError("message exchange failed");
         }
     }
 
-    @Then("message exchange is possible")
-    public void message_exchange_is_possible() throws Exception {
-        if (connection.host() != null && connection.clientId() != null) {
-            connection.host().request(connection.clientId(), RequestMethod.PING, Json.createObjectBuilder().build());
-        }
-    }
-
-    @Given("server supports versions {string}")
-    public void server_supports_versions(String versions) {
-        List<String> supportedVersions = Arrays.stream(versions.split(","))
+    @Given("the server supports versions {string}")
+    public void the_server_supports_versions(String versions) {
+        serverSupportedVersions.clear();
+        serverSupportedVersions.addAll(Arrays.stream(versions.split(","))
                 .map(String::trim)
-                .toList();
-        versionState = new TestState.VersionNegotiation(supportedVersions, versionState.requested(), null);
+                .toList());
     }
 
-    @When("client requests version {string}")
-    public void client_requests_version(String version) {
-        String negotiated = versionState.supported().contains(version)
+    @When("I request connection with version {string}")
+    public void i_request_connection_with_version(String version) {
+        requestedVersion = version;
+        negotiatedVersion = serverSupportedVersions.contains(version)
                 ? version
-                : versionState.supported().stream().max(String::compareTo).orElse(null);
-        versionState = new TestState.VersionNegotiation(versionState.supported(), version, negotiated);
+                : serverSupportedVersions.stream().max(String::compareTo).orElse(null);
     }
 
-    @Then("server accepts the requested version")
-    public void server_accepts_the_requested_version() {
-        if (!Objects.equals(versionState.requested(), versionState.negotiated())) {
+    @Then("the server should accept my version request")
+    public void the_server_should_accept_my_version_request() {
+        if (!Objects.equals(requestedVersion, negotiatedVersion)) {
             throw new AssertionError("version not accepted: requested %s, got %s"
-                    .formatted(versionState.requested(), versionState.negotiated()));
+                    .formatted(requestedVersion, negotiatedVersion));
         }
     }
 
-    @When("client requests unsupported version {string}")
-    public void client_requests_unsupported_version(String version) {
-        String negotiated = versionState.supported().stream().max(String::compareTo).orElse(null);
-        versionState = new TestState.VersionNegotiation(versionState.supported(), version, negotiated);
+    @When("I request connection with unsupported version {string}")
+    public void i_request_connection_with_unsupported_version(String version) {
+        requestedVersion = version;
+        negotiatedVersion = serverSupportedVersions.stream().max(String::compareTo).orElse(null);
     }
 
-    @Then("server responds with its latest supported version")
-    public void server_responds_with_its_latest_supported_version() {
-        String latest = versionState.supported().stream().max(String::compareTo).orElse(null);
-        if (!Objects.equals(versionState.negotiated(), latest)) {
+    @Then("the server should offer its latest supported version")
+    public void the_server_should_offer_its_latest_supported_version() {
+        String expectedLatest = serverSupportedVersions.stream().max(String::compareTo).orElse(null);
+        if (!Objects.equals(negotiatedVersion, expectedLatest)) {
             throw new AssertionError("expected latest version %s, got %s"
-                    .formatted(latest, versionState.negotiated()));
+                    .formatted(expectedLatest, negotiatedVersion));
         }
     }
 
-    @Then("client decides whether to continue")
-    public void client_decides_whether_to_continue() {
-        // No-op: compatibility decision is client implementation-specific
+    @Then("I should be able to decide whether to proceed")
+    public void i_should_be_able_to_decide_whether_to_proceed() {
+        if (negotiatedVersion == null) {
+            throw new AssertionError("no compatible version available");
+        }
     }
 
-    @Given("server declares capabilities {string}")
-    public void server_declares_capabilities(String caps) {
-        Set<ServerCapability> serverCapabilities = parseServerCapabilities(caps);
-        capabilityState = new TestState.CapabilityState(
-            capabilityState.client(), serverCapabilities, capabilityState.available(), capabilityState.unavailable());
+    @Given("the server offers {string} features")
+    public void the_server_offers_features(String features) {
+        serverCapabilities = parseServerCapabilities(features);
     }
 
-    @When("initialization completes")
-    public void initialization_completes() {
-        Set<ServerCapability> available = EnumSet.copyOf(capabilityState.server());
-        Set<ServerCapability> unavailable = EnumSet.allOf(ServerCapability.class);
-        unavailable.removeAll(available);
-        capabilityState = new TestState.CapabilityState(
-            capabilityState.client(), capabilityState.server(), available, unavailable);
+    @When("I complete the connection handshake")
+    public void i_complete_the_connection_handshake() {
+        availableFeatures.clear();
+        availableFeatures.addAll(serverCapabilities);
     }
 
-    @Then("server features {string} are available")
-    public void server_features_are_available(String features) {
+    @Then("I should have access to {string} features")
+    public void i_should_have_access_to_features(String features) {
         Set<ServerCapability> expected = parseServerCapabilities(features);
-        if (!capabilityState.available().containsAll(expected)) {
+        if (!availableFeatures.containsAll(expected)) {
             throw new AssertionError("Expected features not available: %s".formatted(expected));
         }
     }
 
-    @Then("server features {string} are unavailable")
-    public void server_features_are_unavailable(String features) {
-        Set<ServerCapability> expected = parseServerCapabilities(features);
-        if (!capabilityState.unavailable().containsAll(expected)) {
-            throw new AssertionError("Expected features should be unavailable: %s".formatted(expected));
+    @Then("{string} features should not be available")
+    public void features_should_not_be_available(String features) {
+        Set<ServerCapability> expectedUnavailable = parseServerCapabilities(features);
+        Set<ServerCapability> intersection = new HashSet<>(availableFeatures);
+        intersection.retainAll(expectedUnavailable);
+        if (!intersection.isEmpty()) {
+            throw new AssertionError("Expected features should be unavailable but are available: %s".formatted(intersection));
         }
     }
 
-    @Given("an operational MCP connection")
-    public void an_operational_mcp_connection() {
-        if (connection.host() == null) {
-            json_rpc_transport_is_available();
+    @Given("I have an established MCP connection")
+    public void i_have_an_established_mcp_connection() {
+        if (activeConnection == null) {
+            a_transport_mechanism_is_available();
             try {
-                initialize_request_is_sent();
-                initialized_notification_is_sent();
+                i_want_to_connect_using_protocol_version("2025-06-18");
+                i_can_provide_capabilities("sampling, roots, elicitation");
+                i_establish_a_connection_with_the_server();
+                i_should_be_able_to_exchange_messages();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
         }
     }
 
-    @Given("an operational MCP connection with {string} transport")
-    public void an_operational_mcp_connection_with_transport(String transport) {
-        an_operational_mcp_connection();
+    @Given("I have an established MCP connection using {string} transport")
+    public void i_have_an_established_mcp_connection_using_transport(String transportType) {
+        i_have_an_established_mcp_connection();
     }
 
-    @Given("an operational MCP connection with {string} second timeout")
-    public void an_operational_mcp_connection_with_timeout(String seconds) {
-        an_operational_mcp_connection();
+    @Given("I have an established MCP connection with {int} second timeout")
+    public void i_have_an_established_mcp_connection_with_timeout(int timeoutSeconds) {
+        i_have_an_established_mcp_connection();
     }
 
-    @When("request is sent with id {string}")
-    public void request_is_sent_with_id(String id) {
-        RequestId requestId = RequestId.parse(id);
-        JsonObject request = createJsonRpcRequest(requestId, RequestMethod.PING.method(), Json.createObjectBuilder().build());
-        Set<RequestId> updatedUsedIds = new HashSet<>(messageState.usedIds());
-        updatedUsedIds.add(requestId);
-        messageState = new TestState.MessageState(
-            requestId, request, messageState.response(), messageState.notification(),
-            messageState.errorCode(), messageState.errorMessage(), updatedUsedIds);
+    @When("I send a request with identifier {string}")
+    public void i_send_a_request_with_identifier(String id) {
+        lastRequestId = RequestId.parse(id);
+        lastRequest = createRequest(lastRequestId, RequestMethod.PING.method(), Json.createObjectBuilder().build());
+        usedRequestIds.add(lastRequestId);
     }
 
-    @Then("request contains required JSON-RPC 2.0 fields")
-    public void request_contains_required_json_rpc_fields() {
-        JsonObject request = messageState.request();
-        if (request == null || !"2.0".equals(request.getString("jsonrpc", null))
-                || !request.containsKey("id") || !request.containsKey("method")) {
-            throw new AssertionError("request missing required JSON-RPC 2.0 fields");
+    @Then("the request should use proper message format")
+    public void the_request_should_use_proper_message_format() {
+        if (lastRequest == null || !"2.0".equals(lastRequest.getString("jsonrpc", null))
+                || !lastRequest.containsKey("id") || !lastRequest.containsKey("method")) {
+            throw new AssertionError("request missing required message format fields");
         }
     }
 
-    @Then("request id is not null and unique")
-    public void request_id_is_not_null_and_unique() {
-        RequestId requestId = messageState.id();
-        if (requestId == null) {
+    @Then("the request should have a unique identifier")
+    public void the_request_should_have_a_unique_identifier() {
+        if (lastRequestId == null) {
             throw new AssertionError("request id is null");
         }
-        long useCount = messageState.usedIds().stream()
-                .filter(id -> id.equals(requestId))
+        long useCount = usedRequestIds.stream()
+                .filter(id -> id.equals(lastRequestId))
                 .count();
         if (useCount > 1) {
             throw new AssertionError("request id reused");
         }
     }
 
-    @When("server responds")
-    public void server_responds() {
-        JsonObject response = createJsonRpcResponse(messageState.id(), Json.createObjectBuilder().build());
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), response, messageState.notification(),
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+    @When("the server responds")
+    public void the_server_responds() {
+        lastResponse = createResponse(lastRequestId, Json.createObjectBuilder().build());
     }
 
-    @Then("response id matches request id {string}")
-    public void response_id_matches_request_id(String id) {
-        RequestId expected = RequestId.parse(id);
-        JsonObject response = messageState.response();
-        if (response == null || !Objects.equals(response.get("id"), RequestId.toJsonValue(expected))) {
-            throw new AssertionError("response id mismatch: expected %s".formatted(id));
+    @Then("the response should match my request identifier")
+    public void the_response_should_match_my_request_identifier() {
+        if (lastResponse == null || !Objects.equals(lastResponse.get("id"), RequestId.toJsonValue(lastRequestId))) {
+            throw new AssertionError("response id mismatch: expected %s".formatted(lastRequestId));
         }
     }
 
-    @Then("response contains either result or error")
-    public void response_contains_either_result_or_error() {
-        JsonObject response = messageState.response();
-        if (response == null) throw new AssertionError("no response");
-        boolean hasResult = response.containsKey("result");
-        boolean hasError = response.containsKey("error");
+    @Then("the response should contain valid result data")
+    public void the_response_should_contain_valid_result_data() {
+        if (lastResponse == null) throw new AssertionError("no response received");
+        boolean hasResult = lastResponse.containsKey("result");
+        boolean hasError = lastResponse.containsKey("error");
         if (hasResult == hasError) {
             throw new AssertionError("response must have either result or error, not both");
         }
     }
 
-    @When("notification is sent")
-    public void notification_is_sent() {
-        JsonObject notification = createJsonRpcNotification(NotificationMethod.PROGRESS.method(), null);
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), messageState.response(), notification,
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+    @When("I send a notification message")
+    public void i_send_a_notification_message() {
+        lastNotification = createNotification(NotificationMethod.PROGRESS.method(), null);
     }
 
-    @Then("notification has no id field")
-    public void notification_has_no_id_field() {
-        JsonObject notification = messageState.notification();
-        if (notification == null) {
+    @Then("the notification should use proper format")
+    public void the_notification_should_use_proper_format() {
+        if (lastNotification == null) {
             throw new AssertionError("no notification sent");
         }
-        if (notification.containsKey("id")) {
+        if (lastNotification.containsKey("id")) {
             throw new AssertionError("notification should not have id field");
         }
-    }
-
-    @Then("notification contains method and optional params")
-    public void notification_contains_method_and_optional_params() {
-        JsonObject notification = messageState.notification();
-        if (notification == null || !notification.containsKey("method")) {
+        if (!lastNotification.containsKey("method")) {
             throw new AssertionError("notification must contain method field");
         }
     }
 
-    @When("{string} occurs")
-    public void error_condition_occurs(String condition) {
-        int errorCode;
-        String errorMessage;
-        switch (condition) {
-            case "malformed request" -> { errorCode = -32700; errorMessage = "Parse error"; }
-            case "invalid method request" -> { errorCode = -32601; errorMessage = "Method not found"; }
-            case "invalid parameters" -> { errorCode = -32602; errorMessage = "Invalid params"; }
-            case "server internal error" -> { errorCode = -32603; errorMessage = "Internal error"; }
-            default -> throw new IllegalArgumentException("Unknown error condition: " + condition);
-        }
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), messageState.response(), messageState.notification(),
-            errorCode, errorMessage, messageState.usedIds());
-    }
-
-    @Then("server returns {string} with code {int}")
-    public void server_returns_error_with_code(String message, int code) {
-        if (messageState.errorCode() != code || !Objects.equals(messageState.errorMessage(), message)) {
-            throw new AssertionError("expected error %s (%d), got %s (%d)"
-                    .formatted(message, code, messageState.errorMessage(), messageState.errorCode()));
+    @Then("no response should be expected")
+    public void no_response_should_be_expected() {
+        if (lastNotification == null) {
+            throw new AssertionError("no notification was sent");
         }
     }
 
-    // Moved to client_closes_input_stream() method with updated implementation
+    @When("{string} occurs during communication")
+    public void error_occurs_during_communication(String errorSituation) {
+        switch (errorSituation) {
+            case "malformed request" -> { lastErrorCode = -32700; lastErrorMessage = "Parse error"; }
+            case "invalid method request" -> { lastErrorCode = -32601; lastErrorMessage = "Method not found"; }
+            case "invalid parameters" -> { lastErrorCode = -32602; lastErrorMessage = "Invalid params"; }
+            case "server internal error" -> { lastErrorCode = -32603; lastErrorMessage = "Internal error"; }
+            default -> throw new IllegalArgumentException("Unknown error situation: " + errorSituation);
+        }
+    }
 
-    @When("waits for server to exit gracefully")
-    public void waits_for_server_to_exit_gracefully() {
+    @Then("I should receive a proper error response indicating {string}")
+    public void i_should_receive_a_proper_error_response_indicating(String errorType) {
+        if (!Objects.equals(lastErrorMessage, errorType)) {
+            throw new AssertionError("expected error '%s', got '%s'"
+                    .formatted(errorType, lastErrorMessage));
+        }
+        if (lastErrorCode == 0) {
+            throw new AssertionError("no error code set");
+        }
+    }
+
+    @When("I close the connection")
+    public void i_close_the_connection() {
+        try {
+            if (activeConnection != null) activeConnection.close();
+            connectionClosed = true;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @When("wait for the server to shut down gracefully")
+    public void wait_for_the_server_to_shut_down_gracefully() {
         // No-op for test environment
     }
 
-    @When("client closes HTTP connection")
-    public void client_closes_http_connection() {
+    @When("I close the HTTP connection")
+    public void i_close_the_http_connection() {
         try {
-            if (connection.host() != null) connection.host().close();
-            connection = new TestState.ConnectionState(null, connection.clientId(), true);
+            if (activeConnection != null) activeConnection.close();
+            connectionClosed = true;
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
     
-    @Then("connection terminates cleanly")
-    public void connection_terminates_cleanly() {
-        if (!connection.closed()) {
+    @Then("the connection should terminate cleanly")
+    public void the_connection_should_terminate_cleanly() {
+        if (!connectionClosed) {
             throw new AssertionError("connection still open");
         }
     }
 
-    // Moved to updated implementation with new state structure
-
-    // Moved to request_contains_meta_field() method with updated implementation
-
-    // Moved to server_preserves_meta_data_unchanged() method with updated implementation
-
-    @When("server sends response with reserved {string} prefix")
-    public void server_sends_response_with_reserved_prefix(String prefix) {
-        JsonObject meta = Json.createObjectBuilder().add(prefix, 1).build();
-        JsonObject response = createJsonRpcResponse(new RequestId.NumericId(1), meta);
-        messageState = new TestState.MessageState(
-            new RequestId.NumericId(1), messageState.request(), response, messageState.notification(),
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+    @When("I include metadata in my request")
+    public void i_include_metadata_in_my_request() {
+        JsonObject metadata = Json.createObjectBuilder().add("_meta", "client-metadata").build();
+        lastRequest = createRequest(new RequestId.NumericId(1), RequestMethod.PING.method(), metadata);
     }
 
-    @Then("client handles MCP-reserved fields correctly")
-    public void client_handles_mcp_reserved_fields_correctly() {
-        JsonObject response = messageState.response();
-        JsonObject result = response == null ? null : response.getJsonObject("result");
+    @Then("the server should preserve my metadata unchanged")
+    public void the_server_should_preserve_my_metadata_unchanged() {
+        if (lastRequest == null || !lastRequest.containsKey("_meta")) {
+            throw new AssertionError("metadata not preserved in request");
+        }
+    }
+
+    @When("the server includes reserved metadata in responses")
+    public void the_server_includes_reserved_metadata_in_responses() {
+        JsonObject meta = Json.createObjectBuilder().add("_meta_reserved", 1).build();
+        lastResponse = createResponse(new RequestId.NumericId(1), meta);
+    }
+
+    @Then("I should handle MCP-reserved fields correctly")
+    public void i_should_handle_mcp_reserved_fields_correctly() {
+        JsonObject result = lastResponse == null ? null : lastResponse.getJsonObject("result");
         if (result == null || !result.containsKey("_meta_reserved")) {
             throw new AssertionError("MCP-reserved fields not handled correctly");
         }
     }
 
-    @When("server sends response with custom {string} prefix")
-    public void server_sends_response_with_custom_prefix(String prefix) {
-        JsonObject meta = Json.createObjectBuilder().add(prefix, 2).build();
-        JsonObject response = createJsonRpcResponse(new RequestId.NumericId(1), meta);
-        messageState = new TestState.MessageState(
-            new RequestId.NumericId(1), messageState.request(), response, messageState.notification(),
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+    @When("the server includes custom metadata in responses")
+    public void the_server_includes_custom_metadata_in_responses() {
+        JsonObject meta = Json.createObjectBuilder().add("_custom", 2).build();
+        lastResponse = createResponse(new RequestId.NumericId(1), meta);
     }
 
-    @Then("client treats as implementation-specific data")
-    public void client_treats_as_implementation_specific_data() {
-        JsonObject response = messageState.response();
-        JsonObject result = response == null ? null : response.getJsonObject("result");
+    @Then("I should treat it as implementation-specific data")
+    public void i_should_treat_it_as_implementation_specific_data() {
+        JsonObject result = lastResponse == null ? null : lastResponse.getJsonObject("result");
         if (result == null || !result.containsKey("_custom")) {
             throw new AssertionError("custom implementation-specific data missing");
         }
     }
 
-    @Then("client sends cancellation notification")
-    public void client_sends_cancellation_notification() {
+    @When("my request exceeds the timeout duration")
+    public void my_request_exceeds_the_timeout_duration() {
+        // Simulate timeout scenario
+    }
+
+    @Then("I should send a cancellation notification")
+    public void i_should_send_a_cancellation_notification() {
         JsonObject params = Json.createObjectBuilder()
-                .add("id", RequestId.toJsonValue(messageState.id()))
+                .add("id", RequestId.toJsonValue(lastRequestId))
                 .build();
-        JsonObject notification = createJsonRpcNotification(NotificationMethod.CANCELLED.method(), params);
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), messageState.response(), notification,
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+        lastNotification = createNotification(NotificationMethod.CANCELLED.method(), params);
     }
 
-    @Then("client stops waiting for response")
-    public void client_stops_waiting_for_response() {
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), null, messageState.notification(),
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+    @Then("stop waiting for the response")
+    public void stop_waiting_for_the_response() {
+        lastResponse = null;
     }
 
-    @When("request sends progress notifications")
-    public void request_sends_progress_notifications() {
+    @When("my request sends progress notifications")
+    public void my_request_sends_progress_notifications() {
         JsonObject params = Json.createObjectBuilder().add("progress", 0.5).build();
-        JsonObject notification = createJsonRpcNotification(NotificationMethod.PROGRESS.method(), params);
-        messageState = new TestState.MessageState(
-            messageState.id(), messageState.request(), messageState.response(), notification,
-            messageState.errorCode(), messageState.errorMessage(), messageState.usedIds());
+        lastNotification = createNotification(NotificationMethod.PROGRESS.method(), params);
     }
 
-    @Then("timeout may be extended")
-    public void timeout_may_be_extended() {
-        if (messageState.notification() == null) {
+    @Then("the timeout should be extended appropriately")
+    public void the_timeout_should_be_extended_appropriately() {
+        if (lastNotification == null) {
             throw new AssertionError("progress notification not sent");
         }
     }
 
-    @Then("maximum timeout is enforced")
-    public void maximum_timeout_is_enforced() {
+    @Then("a maximum timeout should still be enforced")
+    public void a_maximum_timeout_should_still_be_enforced() {
         // No-op: timeout enforcement is implementation-specific
     }
 
-    // TODO: Implement these step definitions when needed for additional test scenarios
+    @Given("I request protocol version {string}")
+    public void i_request_protocol_version(String version) {
+        requestedVersion = version;
+    }
 
-    // Placeholder methods for future implementation
-    // TODO: These methods are not currently used by the refactored Gherkin scenarios
-    
-    @Then("sensitive information is not exposed")
-    public void sensitive_information_is_not_exposed() {
-        // No-op: implementation should not expose sensitive data
+    @When("the server only supports incompatible versions")
+    public void the_server_only_supports_incompatible_versions() {
+        serverSupportedVersions.clear();
+        serverSupportedVersions.add("1.0.0");
+        negotiatedVersion = null;
+    }
+
+    @Then("I should receive a clear protocol version error")
+    public void i_should_receive_a_clear_protocol_version_error() {
+        if (negotiatedVersion != null) {
+            throw new AssertionError("should have received version error");
+        }
+    }
+
+    @Then("the error should list the server's supported versions")
+    public void the_error_should_list_the_servers_supported_versions() {
+        if (serverSupportedVersions.isEmpty()) {
+            throw new AssertionError("server supported versions not available");
+        }
+    }
+
+    @Given("my connection is initialized but not fully ready")
+    public void my_connection_is_initialized_but_not_fully_ready() {
+        i_have_an_established_mcp_connection();
+    }
+
+    @When("I send a non-ping request")
+    public void i_send_a_non_ping_request() {
+        lastRequest = createRequest(new RequestId.NumericId(1), RequestMethod.TOOLS_LIST.method(), Json.createObjectBuilder().build());
+    }
+
+    @Then("the server should handle the request appropriately")
+    public void the_server_should_handle_the_request_appropriately() {
+        if (lastRequest == null) {
+            throw new AssertionError("no request was sent");
+        }
     }
     
-    @Then("version information is appropriate")
-    public void version_information_is_appropriate() {
-        if (connection.host() != null) {
-            String context = connection.host().aggregateContext();
+    @When("the server provides implementation information")
+    public void the_server_provides_implementation_information() {
+        // Implementation info is provided during connection establishment
+    }
+    
+    @Then("sensitive information should not be exposed")
+    public void sensitive_information_should_not_be_exposed() {
+        if (activeConnection != null) {
+            String context = activeConnection.aggregateContext();
             if (context != null && context.toLowerCase().contains("password")) {
-                throw new AssertionError("sensitive information exposed in version info");
+                throw new AssertionError("sensitive information exposed in implementation info");
             }
         }
     }
     
-    @Then("client requires explicit user approval")
-    public void client_requires_explicit_user_approval() {
-        // No-op: user approval is UI-level concern
+    @Then("version information should be appropriate for sharing")
+    public void version_information_should_be_appropriate_for_sharing() {
+        if (negotiatedVersion == null || negotiatedVersion.isEmpty()) {
+            throw new AssertionError("no version information available");
+        }
     }
     
-    @Then("client controls prompt visibility")
-    public void client_controls_prompt_visibility() {
+    @Given("I have an established MCP connection with sampling capability")
+    public void i_have_an_established_mcp_connection_with_sampling_capability() {
+        clientCapabilities.add(ClientCapability.SAMPLING);
+        i_have_an_established_mcp_connection();
+    }
+    
+    @When("the server requests LLM sampling")
+    public void the_server_requests_llm_sampling() {
+        // Simulated sampling request from server
+    }
+    
+    @Then("I should require explicit user approval")
+    public void i_should_require_explicit_user_approval() {
+        if (!clientCapabilities.contains(ClientCapability.SAMPLING)) {
+            throw new AssertionError("sampling capability not declared");
+        }
+    }
+    
+    @Then("maintain control over prompt visibility")
+    public void maintain_control_over_prompt_visibility() {
         // No-op: prompt visibility is client implementation concern
     }
 }
-
